# ComputerScience_UCSP

./: .gitignore  Calculate_GPA.py  Readme.md
MCC101-Algoritmos_y_Estructura_de_Datos/: Readme.md
MCC101-Algoritmos_y_Estructura_de_Datos/Labo_1_Sorting/: Lab_1.tex
MCC101-Algoritmos_y_Estructura_de_Datos/Labo_4_MiniGoogle/minigoogle/core-server/: CMakeLists.txt  README.md  json_parser.hpp  run_server.cpp  server_http.hpp
MCC101-Algoritmos_y_Estructura_de_Datos/Trabajo_1_Basic-Maths/: Tarea_1.tex
MCC101-Algoritmos_y_Estructura_de_Datos/Trabajo_2_Algorithms-Analysis/: Tarea_2.tex
MCC101-Algoritmos_y_Estructura_de_Datos/Trabajo_3_Linear-Time-Algorithms/: Tarea_3.tex
MCC101-Algoritmos_y_Estructura_de_Datos/Trabajo_4_Greedy-Algorithms/: Tarea_4.tex
MCC102-Matematica_Computacional/Labo_1_SVD/: desQR.m  getH.m  gramSchmidt.m  jacobi_gaussSeidel.m  sor.m  sort_eig.m
MCC102-Matematica_Computacional/Labo_2_Matrix-Descomp/: gradienteCJ_grafica.m  metodoPOTENCIA.m  potenciaINVGERSCH.m
MCC102-Matematica_Computacional/Trabajo_1_Linear-Transforms/: Tarea_1.tex
MCC102-Matematica_Computacional/Trabajo_2_Matrix-Operations/: Tarea_2.tex
MCC102-Matematica_para_Computacion/: Readme.md
MCC102-Matematica_para_Computacion/Labo_1_SVD/: SVD.m
MCC102-Matematica_para_Computacion/Labo_2_Matrix-Descomp/: desLU.m  eigQR.m  gradienteCJ.m
MCC102-Matematica_para_Computacion/Trabajo_3_Matrix-Descomp/: Tarea_3.tex
MCC103-Computacion_Paralela_y_Distribuida/Labo_1_Convolution/: convolucion.txt  prob_1.txt
MCC103-Computacion_Paralela_y_Distribuida/Labo_2_Sorting/: cpu_parallel_sort.cpp  datos_sort.txt  listGeneration.py
MCC103-Computacion_Paralela_y_Distribuida/Labo_3_Convolution-GPU/: convolucion.txt  gpu_parallel_convolution.cu
MCC103-Computacion_Paralela_y_Distribuida/Labo_4_Sorting-GPU/: datos_sort.txt  infoGPU.cu
MCC103-Programacion_Paralela_y_Distribuida/: Readme.md
MCC103-Programacion_Paralela_y_Distribuida/Labo_1_Convolution/: cpu_parallel_convolution.cpp  prob_1.cpp  prob_2.cpp  prob_2.txt
MCC103-Programacion_Paralela_y_Distribuida/Labo_4_Sorting-GPU/: gpu_parallel_sort.cu
MCC104-Seminario_de_Tesis_I/: State_of_Art.html  diff_img.py
MCC104-Seminario_de_Tesis_I/State-Of-Art/: State.html
MCC104-Seminario_de_Tesis_I/resources/: sheet.css
MCC201-Procesamiento_de_Imagenes_y_Vision_Computacional/: Readme.md
MCC201-Procesamiento_de_Imagenes_y_Vision_Computacional/ComputerVision/Trabajo_2_Fast-3D-Recognition/fast-3D-recognition/: CMakeLists.txt  Readme.md  fast3DRecognition.cpp  test_kinect2.cpp
MCC201-Procesamiento_de_Imagenes_y_Vision_Computacional/ComputerVision/Trabajo_2_Fast-3D-Recognition/fast-3D-recognition/params/: calib_076520141247.yml
MCC201-Procesamiento_de_Imagenes_y_Vision_Computacional/ComputerVision/Trabajo_2_Fast-3D-Recognition/fast-3D-recognition/utils/: kinect2grabber.h  norm2vfh.h
MCC202-Inteligencia_Artificial/: Readme.md
MCC202-Inteligencia_Artificial/Labo_1_Classification/: 2D-classes.ipynb
MCC202-Inteligencia_Artificial/Labo_2_DeepLearning-CNN/: ucsp_unet.ipynb
MCC202-Inteligencia_Artificial/Labo_4_GANs/: ucsp_dcgan_general_template.ipynb
MCC202-Inteligencia_Artificial/Labo_5_Text-Generation/: test.py  train.py
MCC202-Inteligencia_Artificial/Labo_6_Captcha-Generation/: test.py
MCC202-Inteligencia_Artificial/Trabajo_1_Linear-Regression/: Linear_Regression.ipynb  Readme.md
MCC202-Inteligencia_Artificial/Trabajo_3_Neural-Networks/: Neural_Networks.ipynb
MCC202-Inteligencia_Artificial/Trabajo_5_Naive-Bayes/: NaiveBayes.ipynb
MCC202-Inteligencia_Artificial/Trabajo_6_Variable-Elimination/: student_bayes.net
MCC202-Inteligencia_Artificial/Trabajo_7_Hidden_Markov-Model/: Markov_Model.ipynb
MCC202-Sistemas_Inteligentes/Labo_1_Classification/: 3D-classes.ipynb
MCC202-Sistemas_Inteligentes/Labo_2_DeepLearning-CNN/: ucsp_mnistkeras.ipynb
MCC202-Sistemas_Inteligentes/Labo_6_Captcha-Generation/: train.py
MCC202-Sistemas_Inteligentes/Trabajo_1_Linear-Regression/: Linear_Regression.ipynb
MCC202-Sistemas_Inteligentes/Trabajo_2_Logistic-Regression/: Logistic_Regression.ipynb  classification.ipynb
MCC202-Sistemas_Inteligentes/Trabajo_4_RNN/: Recurrent_Neural_Networks.ipynb
MCC202-Sistemas_Inteligentes/Trabajo_6_Variable-Elimination/: Variable_Elimination.ipynb  ve.ipynb
MCC203-Computacion_Grafica/Trabajo_1_Iluminacion/: Readme.md  gizmo.cpp  main.cpp  makefile  (+5 more)
MCC203-Graficos/: Readme.md
MCC204-Seminario_de_Tesis_II/: Readme.md  classify_streets.m  compute_features_streets.m  create_streets_heatmaps.m  dcnn.py  dcnn_extract_features.py  extract_features.m  rbf.py  regress_streets.m  regressor.py  svr.py  tempSeries.py  template.html  template_marker.html  template_marker_2.html  tsne.py
MCC302-Seminario_de_Tesis_III/: Readme.md  classifier.m  classifier_dcnn.py  classifier_finetuned.py  classifier_kfold.py  classifier_splitclass.py  classifier_summary.py  correlations.py  extract_features.py  my_conda_env.yml  rbf.py  regressor.m  regressor_dcnn.py  regressor_finetuned.py  regressor_kfold.py  regressor_splitclass.py  regressor_summary.py  tempSeries.py  template_match.py  tsne.py
MCC401-Seminario_de_Tesis_IV/: data_getAreas_objects.py  extract_features.py  features_classifier.py  features_classifier_pp2.py  features_datasets.py  features_getAreas.py  features_plots.py  features_results.py  features_visualization.py
(+557 files in other folders)
